# smith

./: .bazelrc  .bazelrc.travis  .editorconfig  .gitignore  .gometalinter.json  .travis.yml  BUILD.bazel  CHANGELOG.md  Gopkg.toml  LICENSE  Makefile  README.md  WORKSPACE  api.go  client.go  cover.sh  deep_copy.go  event_types.go  fixed_BUILD_for_sets.bazel  glide.yaml  go.mod  go.sum  interfaces.go  kubernetes_types.go  main.go  tools.go  types.go  types_test.go  util.go
cmd/crd/: BUILD.bazel  main.go
cmd/schema/: BUILD.bazel  main.go
cmd/smith/: BUILD.bazel  main.go  main_test.go  tpr_attribute_test.go  utils_for_test.go  version.go
cmd/smith/app/: BUILD.bazel  app.go  aux_server.go  bundle_controller.go  informers.go  types.go
examples/sleeper/: BUILD.bazel  app.go  client.go  sleeper_event_handler.go  types.go  types_test.go
examples/sleeper/main/: BUILD.bazel  main.go
examples/sleeper/pkg/apis/sleeper/v1/: BUILD.bazel  register.go  types.go  (+2 more)
it/: BUILD.bazel  adoption_test.go  crd_attribute_test.go  deployment_dependencies_test.go  deployment_ready_test.go  main_test.go  resource_deletion_test.go  update_test.go  utils_for_tests.go  workflow_test.go
it/ready/: BUILD.bazel  deployment_ready_test.go  main_test.go
it/sc/: BUILD.bazel  instance_and_binding_depend_on_secret_test.go  main_test.go  service_catalog_test.go  ups-clusterservicebroker.yaml  zz_objects_for_test.go
pkg/catalog/: BUILD.bazel  catalog.go
pkg/cleanup/: BUILD.bazel  built_in_types.go  object_cleanup.go  object_cleanup_test.go
pkg/cleanup/types/: BUILD.bazel  built_in.go
pkg/client/: BUILD.bazel  bundle.go  client.go  config.go  smart.go  template.go  templaterender.go  util.go
pkg/client/clientset_generated/clientset/: BUILD.bazel  clientset.go  doc.go
pkg/client/clientset_generated/clientset/fake/: BUILD.bazel  clientset_generated.go  doc.go  register.go
pkg/client/clientset_generated/clientset/scheme/: BUILD.bazel  doc.go  register.go
pkg/client/smart/: BUILD.bazel  discovery.go  discovery_test.go  smart.go
pkg/controller/: BUILD.bazel  bundle_sync_task.go  controller.go  controller_bundle_event_handler.go  controller_crd_event_handler.go  controller_resource_event_handler.go  controller_sync_task.go  controller_test.go  controller_tpr_event_handler.go  controller_worker.go  controller_worker_test.go  finalizers.go  generic.go  generic_event_handler.go  generic_resource_event_handler.go  generic_worker.go  resource_sync_task.go  service_instance.go  service_instance_test.go  spec_processor.go  spec_processor_test.go  types.go  work_queue.go
pkg/controller/bundlec/: BUILD.bazel  bundle_sync_task.go  checksum.go  controller.go  controller_bundle_event_handler.go  controller_crd_event_handler.go  controller_resource_event_handler.go  controller_worker.go  controller_worker_test.go  deployment.go  deployment_test.go  finalizers.go  hash.go  resource_sync_task.go  service_instance.go  service_instance_test.go  spec_processor.go  spec_processor_test.go  types.go
pkg/controller/bundlec_test/: BUILD.bazel  actual_object_passed_to_plugin_test.go  cleanup_test.go  cr_in_another_namespace_test.go  delay_postpone_delete_removed_object_test.go  delay_proceed_delete_removed_object_test.go  delay_start_delete_removed_object_test.go  delete_removed_object_test.go  deleted_bundle_foreground_deletion_noop_test.go  deleted_bundle_manual_delete_resources_fail_test.go  deleted_bundle_manual_delete_resources_success_test.go  deleted_bundle_remove_finalizer_test.go  detect_infinite_update_cycles_test.go  finalizer_added_if_not_present_test.go  invalid_depends_on_test.go  no_actions_for_blocked_resources_test.go  no_deletions_while_in_progress_test.go  not_marked_crd_ignored_test.go  owner_references_test.go  plugin_error_propagated_test.go  plugin_schema_invalid_test.go  plugin_spec_processed_test.go  processing_continues_after_error_test.go  prohibited_annotations_object_test.go  prohibited_annotations_plugin_test.go  propagate_status_test.go  resolve_binding_secret_references_test.go  schema_early_validation_test.go  secret_keys_not_merged_test.go  service_instance_schema_invalid_test.go  two_resources_same_name_test.go  zz_objects_for_test.go  zz_plugins_for_test.go  zz_plumbing_for_test.go
pkg/controller/graph/: topological_sort_test.go  types.go
pkg/crd/: BUILD.bazel  crd.go
pkg/plugin/: BUILD.bazel  plugin.go  types.go
pkg/readychecker/: BUILD.bazel  built_in_types.go  nested_helpers.go  ready_checker.go
pkg/readychecker/types/: BUILD.bazel  built_in.go
pkg/resources/: BUILD.bazel  client.go  converters.go  crd_helpers.go  discovery.go  discovery_test.go  kinds.go  nested_helpers.go  nested_helpers_test.go  objects.go  objects_test.go  store.go  tpr_helpers.go  tpr_helpers_k8s.go  tpr_helpers_k8s_test.go  tpr_helpers_test.go  util.go
pkg/resources/apitypes/: BUILD.bazel  informers.go  scheme.go
pkg/speccheck/: BUILD.bazel  hash.go  speccheck.go  speccheck_test.go  types.go
pkg/speccheck/builtin/: BUILD.bazel  built_in.go  known_types.go  process_deployment.go  process_deployment_test.go  process_secret.go  process_service.go  process_service_binding.go  process_service_instance.go  process_service_instance_test.go  process_util.go
pkg/speccheck/testing/: BUILD.bazel
pkg/specchecker/: BUILD.bazel  built_in.go  checker.go  checker_test.go  hash.go  process_deployment.go  process_secret.go  process_service.go  process_service_binding.go  process_service_instance.go  process_util.go  specchecker.go  specchecker_test.go  types.go
pkg/specchecker/builtin/: BUILD.bazel  known_types.go  process_deployment.go  process_deployment_test.go  process_secret.go  process_service.go  process_service_binding.go  process_service_instance.go  process_service_instance_test.go  process_util.go
pkg/specchecker/testing/: BUILD.bazel  stuff_for_tests.go
pkg/store/: BUILD.bazel  bundle.go  catalog.go  crd.go  multi.go  multi_basic.go  tpr_store.go
pkg/templatecontroller/: BUILD.bazel  controller.go  controller_template_event_handler.go  controller_worker.go  templaterender_sync_task.go
(+134 files in other folders)
