# Disable build files generation for these directories
# gazelle:exclude vendor/github.com/bazelbuild/buildtools/buildifier2
# gazelle:exclude vendor/golang.org/x/tools/cmd/fiximports/testdata
# gazelle:exclude vendor/golang.org/x/tools/go/gcimporter15/testdata
# gazelle:exclude vendor/golang.org/x/tools/go/internal/gccgoimporter/testdata
# gazelle:exclude vendor/golang.org/x/tools/go/loader/testdata
# gazelle:exclude vendor/golang.org/x/tools/go/internal/gcimporter/testdata

load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@bazel_gazelle//:def.bzl", "gazelle")
load("@com_github_bazelbuild_buildtools//buildifier:def.bzl", "buildifier")
load("@com_github_atlassian_bazel_tools//buildozer:def.bzl", "buildozer")
load("@com_github_atlassian_bazel_tools//goimports:def.bzl", "goimports")
load("@com_github_atlassian_bazel_tools//gometalinter:def.bzl", "gometalinter")

gazelle(
    name = "gazelle",
    external = "vendored",
    gazelle = "@bazel_gazelle//cmd/gazelle:gazelle_pure",
    prefix = "github.com/atlassian/smith",
)

gazelle(
    name = "gazelle_fix",
    command = "fix",
    external = "vendored",
    gazelle = "@bazel_gazelle//cmd/gazelle:gazelle_pure",
    prefix = "github.com/atlassian/smith",
)

go_library(
    name = "go_default_library",
    srcs = ["api.go"],
    importpath = "github.com/atlassian/smith",
    visibility = ["//visibility:public"],
)

buildifier(
    name = "buildifier",
    exclude_patterns = ["./vendor/*"],
)

buildifier(
    name = "buildifier_check",
    exclude_patterns = ["./vendor/*"],
    mode = "check",
)

buildozer(
    name = "buildozer",
    commands = "//build:buildozer_commands.txt",
)

goimports(
    name = "goimports",
    display_diffs = True,
    exclude_files = [
        "zz_generated.*",
    ],
    exclude_paths = [
        "./vendor/*",
        "./pkg/client/clientset_generated/*",
    ],
    prefix = "github.com/atlassian/smith",
    write = True,
)

gometalinter(
    name = "gometalinter",
    config = "//:.gometalinter.json",
    paths = [
        ".",
        "cmd/...",
        "examples/...",
        "it/...",
        "pkg/...",
    ],
    prefix = "github.com/atlassian/smith",
)
