load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["utils_for_tests.go"],
    importpath = "github.com/atlassian/smith/it",
    visibility = ["//visibility:public"],
    deps = [
        "//cmd/smith/app:go_default_library",
        "//examples/sleeper:go_default_library",
        "//pkg/apis/smith/v1:go_default_library",
        "//pkg/client/clientset_generated/clientset:go_default_library",
        "//pkg/client/smart:go_default_library",
        "//pkg/resources:go_default_library",
        "//pkg/util:go_default_library",
        "//pkg/util/testing:go_default_library",
        "//vendor/github.com/ash2k/stager:go_default_library",
        "//vendor/github.com/atlassian/ctrl:go_default_library",
        "//vendor/github.com/atlassian/ctrl/apis/condition/v1:go_default_library",
        "//vendor/github.com/atlassian/ctrl/app:go_default_library",
        "//vendor/github.com/atlassian/ctrl/options:go_default_library",
        "//vendor/github.com/pkg/errors:go_default_library",
        "//vendor/github.com/prometheus/client_golang/prometheus:go_default_library",
        "//vendor/github.com/stretchr/testify/assert:go_default_library",
        "//vendor/github.com/stretchr/testify/require:go_default_library",
        "//vendor/go.uber.org/zap:go_default_library",
        "//vendor/go.uber.org/zap/zaptest:go_default_library",
        "//vendor/k8s.io/api/core/v1:go_default_library",
        "//vendor/k8s.io/apiextensions-apiserver/pkg/client/clientset/clientset:go_default_library",
        "//vendor/k8s.io/apiextensions-apiserver/pkg/client/informers/externalversions/apiextensions/v1beta1:go_default_library",
        "//vendor/k8s.io/apiextensions-apiserver/pkg/client/listers/apiextensions/v1beta1:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/api/errors:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/apis/meta/v1:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/fields:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/runtime:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/watch:go_default_library",
        "//vendor/k8s.io/client-go/dynamic:go_default_library",
        "//vendor/k8s.io/client-go/kubernetes:go_default_library",
        "//vendor/k8s.io/client-go/rest:go_default_library",
        "//vendor/k8s.io/client-go/restmapper:go_default_library",
        "//vendor/k8s.io/client-go/tools/cache:go_default_library",
        "//vendor/k8s.io/client-go/tools/watch:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    size = "medium",
    timeout = "short",
    srcs = [
        "adoption_test.go",
        "crd_attribute_test.go",
        "deployment_ready_test.go",
        "main_test.go",
        "resource_deletion_test.go",
        "update_test.go",
        "workflow_test.go",
    ],
    embed = [":go_default_library"],
    race = "on",
    tags = [
        "external",
        "manual",
    ],
    deps = [
        "//:go_default_library",
        "//examples/sleeper:go_default_library",
        "//examples/sleeper/pkg/apis/sleeper/v1:go_default_library",
        "//pkg/apis/smith/v1:go_default_library",
        "//pkg/util/testing:go_default_library",
        "//vendor/github.com/ash2k/stager:go_default_library",
        "//vendor/github.com/atlassian/ctrl/apis/condition/v1:go_default_library",
        "//vendor/github.com/stretchr/testify/assert:go_default_library",
        "//vendor/github.com/stretchr/testify/require:go_default_library",
        "//vendor/k8s.io/api/apps/v1:go_default_library",
        "//vendor/k8s.io/api/core/v1:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/api/errors:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/apis/meta/v1:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/runtime:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/util/intstr:go_default_library",
    ],
)
