load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/atlassian/smith/cmd/crd",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/resources:go_default_library",
        "//vendor/github.com/ghodss/yaml:go_default_library",
        "//vendor/github.com/pkg/errors:go_default_library",
    ],
)

go_binary(
    name = "crd",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
