load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/atlassian/smith/cmd/crd",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/crd:go_default_library",
        "//pkg/resources:go_default_library",
    ],
)

go_binary(
    name = "crd",
    embed = [":go_default_library"],
    race = "on",
    visibility = ["//visibility:public"],
)
