load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//container:container.bzl", "container_image", "container_push")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/atlassian/smith/cmd/smith",
    visibility = ["//visibility:private"],
    deps = ["//cmd/smith/app:go_default_library"],
)

go_binary(
    name = "smith",
    embed = [":go_default_library"],
    importpath = "github.com/atlassian/smith/cmd/smith",
    visibility = ["//visibility:public"],
)

go_image(
    name = "container",
    binary = ":smith",
)

container_push(
    name = "push-docker",
    format = "Docker",
    image = ":container",
    registry = "index.docker.io",
    repository = "atlassianlabs/smith",
    stamp = True,
    tag = "{STABLE_BUILD_GIT_TAG}-{STABLE_BUILD_GIT_COMMIT}",
)
