load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//container:container.bzl", "container_push")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/atlassian/smith/cmd/smith",
    visibility = ["//visibility:private"],
    deps = [
        "//cmd/smith/app:go_default_library",
        "//vendor/github.com/atlassian/ctrl:go_default_library",
        "//vendor/github.com/atlassian/ctrl/app:go_default_library",
    ],
)

go_binary(
    name = "smith",
    embed = [":go_default_library"],
    pure = "on",
    visibility = ["//visibility:public"],
)

go_binary(
    name = "smith_race",
    embed = [":go_default_library"],
    race = "on",
    tags = ["manual"],
    visibility = ["//visibility:public"],
)

go_image(
    name = "container",
    binary = ":smith",
    tags = ["manual"],
)

go_image(
    name = "container_race",
    binary = ":smith_race",
    tags = ["manual"],
)

container_push(
    name = "push_docker",
    format = "Docker",
    image = ":container",
    registry = "index.docker.io",
    repository = "atlassianlabs/smith",
    stamp = True,
    tag = "{STABLE_BUILD_GIT_TAG}-{STABLE_BUILD_GIT_COMMIT}",
    tags = ["manual"],
)

container_push(
    name = "push_docker_race",
    format = "Docker",
    image = ":container_race",
    registry = "index.docker.io",
    repository = "atlassianlabs/smith",
    stamp = True,
    tag = "{STABLE_BUILD_GIT_TAG}-{STABLE_BUILD_GIT_COMMIT}-race",
    tags = ["manual"],
)
