load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "plugin.go",
        "types.go",
    ],
    importpath = "github.com/atlassian/smith/pkg/plugin",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/apis/smith/v1:go_default_library",
        "//vendor/github.com/pkg/errors:go_default_library",
        "//vendor/github.com/xeipuuv/gojsonschema:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/runtime:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/runtime/schema:go_default_library",
    ],
)
