load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "crd_helpers.go",
        "objects.go",
    ],
    importpath = "github.com/atlassian/smith/pkg/resources",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/apis/smith:go_default_library",
        "//pkg/apis/smith/v1:go_default_library",
        "//pkg/util:go_default_library",
        "//vendor/github.com/atlassian/ctrl/logz:go_default_library",
        "//vendor/github.com/pkg/errors:go_default_library",
        "//vendor/go.uber.org/zap:go_default_library",
        "//vendor/k8s.io/apiextensions-apiserver/pkg/apis/apiextensions/v1beta1:go_default_library",
        "//vendor/k8s.io/apiextensions-apiserver/pkg/client/clientset/clientset:go_default_library",
        "//vendor/k8s.io/apiextensions-apiserver/pkg/client/listers/apiextensions/v1beta1:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/api/errors:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/apis/meta/v1:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/util/wait:go_default_library",
        "//vendor/k8s.io/client-go/util/jsonpath:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    size = "small",
    srcs = ["objects_test.go"],
    embed = [":go_default_library"],
    race = "on",
    deps = [
        "//pkg/apis/smith/v1:go_default_library",
        "//vendor/github.com/stretchr/testify/assert:go_default_library",
        "//vendor/github.com/stretchr/testify/require:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/util/json:go_default_library",
    ],
)
